<resources>
    <string name="app_name">SharedPreferenceMvp</string>
    <string name="ingresa_un_n_mero_decimal">Ingresa un número decimal</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="ingresa_un_texto">Ingresa un texto</string>
    <string name="ingresa_un_n_mero_entero">Ingresa un número entero</string>
    <string name="mostrar">Mostrar</string>
</resources>